--- a/drinfo.1
+++ b/drinfo.1
@@ -1,4 +1,4 @@
-.TH DRINFO 1 "June 2024" "Version 1.0.2" "User Commands"
+.TH DRINFO 1 "June 2024" "Version 1.0.4" "User Commands"
 .SH NAME
 drinfo \- display information about drives and their storage usage
 .SH SYNOPSIS
@@ -6,7 +6,8 @@ drinfo \- display information about drives and their storage usage
 .RI [ OPTION ]
 .SH DESCRIPTION
 .B drinfo
-lists all detected local and network drives and shows their storage usage graphically in the terminal.
+lists all detected local and network drives and Shows mount point, filesystem type, device path,
+UUID, label, mount options, used, available and inodes + SMART status (only as root).
 
 .SH OPTIONS
 .TP
